# FacultyHub

./: .gitignore  AGENTS.md  capacitor.config.ts  login_fail.html  output.txt  package-lock.json  package.json
.orchids/: orchids.json
android/app/: build.gradle
android/app/src/main/java/com/facultytracker/app/: MainActivity.java
android/app/src/main/res/values/: strings.xml
public/: sw.js
rust_vtop/rust/: Cargo.toml  Dockerfile  combined.txt  combined_2.txt  combined_3.txt  combined_4.txt  combined_5.txt  combined_6.txt  err.txt  login_fail.html  out.txt
rust_vtop/rust/src/: frb_generated.rs
rust_vtop/rust/src/api/: mod.rs  simple.rs  vtop_get_client.rs
rust_vtop/rust/src/api/vtop/: mod.rs  session_manager.rs  types.rs  vtop_client.rs  vtop_config.rs  vtop_errors.rs  wifi.rs
rust_vtop/rust/src/api/vtop/paraser/: mod.rs  parseattn.rs  parsemarks.rs  parsesched.rs  parsett.rs  wifi_portal.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/vtop-login/: route.ts
src/components/: BottomNav.tsx  Dashboard.tsx  FacultyCard.tsx  PandaLogin.tsx  ProfilePage.tsx
src/hooks/: useFirebase.ts
src/lib/: firebase.ts
