[package]
name = "rust_lib_vitapmate"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[dependencies]
reqwest = { version = "0.12.20",default-features = false, features = ["stream","rustls-tls","json","multipart","cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.23.1"
base = "0.1.0"
base64 = "0.22.1"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "time", "net"] }
urlencoding = "2"
futures = "0.3.31"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

# [patch.crates-io]
# web-sys = { git = "https://github.com/rustwasm/wasm-bindgen", package = "web-sys" }


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }


[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 16 # Use more units for faster, less memory-intensive build
lto = false        # Disable link-time optimization to save RAM during build
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
